--- a/Clones/amazon-clone/src/Header.css
+++ b/Clones/amazon-clone/src/Header.css
@@ -32,3 +32,33 @@
     border:none;
     width: 100%;
 }
+
+.header__nav {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.header__optionLineOne {
+    font-size: 10px;
+}
+.header__optionLineTwo {
+    font-size: 13px;
+    font-weight: 800;
+}
+.header__optionBasket {
+    color: white;
+    display:flex;
+    align-items: center;
+}
+.header__option {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    margin-right: 10px;
+    color: white;
+}
+.header__basketCount {
+    margin-left: 10px;
+    margin-right: 10px;
+
+}
